--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
 </head>
 
 <body>
-    <!-- header start -->
-    <header>
 
+    <!-- header start -->
+    <header class="Idea-section">
+        <div class="logo">
+            <div class="logo-image">
+                <img src="./images/icons/logo.png" alt="">
+            </div>
+            <div class="logo-name">
+                <p>Idea</p>
+            </div>
+
+        </div>
+        <nav class="menu-bar">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Works</a>
+            <img src="./images/icons/profile.png" alt="">
+        </nav>
     </header>
     <!-- header end -->
     <main>
